--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
    <link rel="stylesheet" href="./style.css">
  </head>
  <body>
-   <div class="wrap">
+    <header class=menu>
+      <div class="container">
+        <label for="toggle-1" class="toggle-menu"><ul><li></li> <li></li> <li></li></ul></label>
+         <input type="checkbox" id="toggle-1"> 
+          <nav>
+            <ul>
+                <li><a href="#logo">Главная</a></li>
+                <li><a href="#about">О компании</a></li>
+                <li><a href="#portfolio">Портфолио</a></li>
+                <li><a href="#services">Услуги</a></li>
+                <li><a href="#gallery">Галерея</a></li>
+                <li><a href="#contact">Контакты</a></li>
+            </ul>
+          </nav>
+      </div>
+    </header>
+    <div class="wrap">
       <h1 class="wrap__title">Заголовок</h1>
    </div>
  </body>
